--- a/src/public/index.html
+++ b/src/public/index.html
@@ -13,16 +13,19 @@
 
     <div>
         <h2>Messages</h2>
-        <div id="output"></div>
-        <input type="email" name="email" id="email" placeholder="email">
-        <input type="text" name="nombre" id="nombre" placeholder="nombre">
-        <input type="text" name="apellido" id="apellido" placeholder="apellido">
-        <input type="number" name="edad" id="edad" placeholder="edad">
-        <input type="text" name="alias" id="alias" placeholder="alias">
-        <input class="input" type="text" id="message" style="margin-top: 15px" placeholder="message" />
-        <button id="send" class="button" style="margin-top: 15px">
-            Send
-        </button>
+        <div id="outputChats"></div>
+        <form action="" id="chatForm">
+            <input type="email" name="email" id="email" placeholder="email">
+            <input type="text" name="nombre" id="nombre" placeholder="nombre">
+            <input type="text" name="apellido" id="apellido" placeholder="apellido">
+            <input type="number" name="edad" id="edad" placeholder="edad">
+            <input type="text" name="alias" id="alias" placeholder="alias">
+            <input class="input" type="text" id="mensaje" style="margin-top: 15px" placeholder="message" />
+            <button id="send" class="button" style="margin-top: 15px">
+                Send
+            </button>
+        </form>
+
     </div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="main.js" type="module"></script>
